<resources>
    <string name="app_name">Agnito Media</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="fill_the_details_to_register_yourself">Fill The Details To Register Yourself</string>
    <string name="email">Example@gmail.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="fill_the_details_to_log_in">Fill the details to Log in</string>
    <string name="log_in">Log In</string>
    <string name="emails">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="mobile">Mobile</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome">Welcome</string>
    <string name="request_otp">Request OTP</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="phone">Phone</string>
    <string name="remember_me">Remember Me</string>
    <string name="verification_code">Verification Code</string>
    <string name="submit">Submit</string>
    <string name="resend">Resend</string>
    <string name="we_have_sent_the_code_verification_to_n_your_mobile_number">We have sent the code verification to \n your mobile number</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_text">If you’re into non-fungible tokens (NFTs), you probably have pondered at some point – where can I find the best captions to display my NFT collection?Well, you’re in luck</string>
    <string name="dummy_new">If you’re into non-fungible tokens (NFTs), you probably have pondered at some point – where can I find the best captions to display my NFT collection?Well, you’re in luck,If you’re into non-fungible tokens (NFTs), you probably have pondered at some point – where can I find the best captions to display my NFT collection?Well, you’re in luck,If you’re into non-fungible tokens (NFTs), you probably have pondered at some point – where can I find the best captions to display my NFT collection?Well, you’re in luck,If you’re into non-fungible tokens (NFTs), you probably have pondered at some point – where can I find the best captions to display my NFT collection?Well, you’re in luck,If you’re into non-fungible tokens (NFTs), you probably have pondered at some point – where can I find the best captions to display my NFT collection?Well, you’re in luck,If you’re into non-fungible tokens (NFTs), you probably have pondered at some point – where can I find the best captions to display my NFT collection?Well, you’re in luck,If you’re into non-fungible tokens (NFTs), you probably have pondered at some point – where can I find the best captions to display my NFT collection?Well, you’re in luck</string>

    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="comments">Comments</string>
    <string name="shares">Shares</string>
    <string name="send_request">Send Request</string>
    <string name="created">Created</string>
    <string name="item">Item</string>
    <string name="creator_fee">Creator fee</string>
    <string name="collection">Collection</string>
    <string name="floor_price">Floor Price</string>
    <string name="volume">Volume</string>
    <string name="items">items</string>
    <string name="prize">Prize</string>
    <string name="buy_now">Buy Now</string>
    <string name="complete_checkout">Complete Checkout</string>
    <string name="name">Name</string>
    <string name="royalties">Royalties</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="wallet">Wallet</string>
    <string name="upi">UPI</string>
    <string name="credit_card">Credit Card</string>
    <string name="payment">Payment</string>
    <string name="my_wallet">My wallet</string>
    <string name="add_balance">Add Balance</string>
    <string name="setting">Setting</string>
    <string name="saved">Saved</string>
    <string name="privacy">Privacy</string>
    <string name="help">Help</string>
    <string name="about">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="story">Story</string>
    <string name="video">Video</string>
    <string name="nfts">NFTs</string>
    <string name="notification">Notification</string>
    <string name="owners">Owners</string>
    <string name="views">Views</string>
    <string name="favorite">Favorite</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="make_offers">Make Offers</string>
    <string name="description">Description</string>
    <string name="property">Property</string>
    <string name="details">Details</string>
    <string name="dummyDes">In this artwork Glam Beckett captures David Bowie’s influence on people, his iconic characters that appear in our minds while we listen to his music, and also his magic and sparks of creativity that  encourages us to express ourselves and actively engage with art in different forms</string>
    <string name="price_history">Price History</string>
    <string name="all_time">All Time</string>
    <string name="item_activity">Item Activity</string>
    <string name="filter">Filter</string>
    <string name="event">Event</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="transfer">Transfer</string>
    <string name="sale">Sale</string>
    <string name="more_from_this_collection">More from this collection</string>
    <string name="storys">Storys</string>
    <string name="post">Post</string>
    <string name="stories">Stories</string>
    <string name="done">Done</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_name">Your Name</string>
    <string name="username">Username</string>
    <string name="your_email">Your Email</string>
    <string name="bio">Bio</string>
    <string name="add_your_bio">Add Your Bio</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="security">Security</string>
    <string name="personal_details">Personal Details</string>
    <string name="view_all">View All</string>
    <string name="videos">Videos</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="birthday">Birthday</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="your_e_mail_address">Your E-mail Address</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="type_here">Type Here</string>
    <string name="send">Send</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_new_password">Re-type New Password</string>
    <string name="update_password">Update Password</string>
    <string name="cancel">Cancel</string>
    <string name="website">Website</string>
    <string name="contact_number">Contact Number</string>
    <string name="social_media">Social Media :</string>
    <string name="add_a_reply">Add a Reply</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="ex_bachelor_s">Ex: Bachelor\'s</string>
    <string name="education">Education</string>
    <string name="ex_university">Ex: University</string>
    <string name="year_of_passing">Year of Passing</string>
    <string name="awards">Awards</string>
    <string name="certificate_name">Certificate Name</string>
    <string name="issuning_organization">Issuing Organization</string>
    <string name="credential_id">Credential ID</string>
    <string name="credential_url">Credential URL</string>
    <string name="profiles">Profiles</string>
    <string name="all">All</string>
    <string name="reply">Reply</string>
    <string name="rply">REPLY</string>
</resources>