<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trans"
    tools:context=".activity.EditProfileActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:id="@+id/rlMain"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:background="?actionBarItemBackground"
            android:padding="10dp"

            android:src="@drawable/backk" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/opensansbold"
            android:gravity="center_horizontal"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="@font/opensansmedium"
            android:text="@string/done"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="@color/purple_200"
            android:textSize="14sp" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/proback" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginTop="-20dp"
                android:background="@drawable/blue_circel">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/came" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp">

                <RelativeLayout
                    android:id="@+id/rl"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:layout_centerInParent="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_Img"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/profi" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlEdit"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="-35dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/rl"
                    android:background="@drawable/blue_circel">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/came" />

                </RelativeLayout>


            </RelativeLayout>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensansmedium"
                android:gravity="center_horizontal"
                android:text="@string/name"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/whiteround_btn"
                android:layout_height="50dp">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/grey_text"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/your_name"
                    android:maxLength="40"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_text"
                    android:textSize="14sp">


                </EditText>
            </RelativeLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensansmedium"
                android:gravity="center_horizontal"
                android:text="@string/emails"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/whiteround_btn"
                android:layout_height="50dp">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/grey_text"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/your_email"
                    android:maxLength="40"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_text"
                    android:textSize="14sp">


                </EditText>
            </RelativeLayout>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensansmedium"
                android:gravity="center_horizontal"
                android:text="@string/bio"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/whiteround_btn"
                android:layout_height="50dp">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/grey_text"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/add_your_bio"
                    android:maxLength="100"
                    android:inputType="textShortMessage"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_text"
                    android:textSize="14sp">


                </EditText>
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>